index.css
/* ... */
.bulletpal_face {
  top: 82px;
  left: 24px;
  position: relative;
  width: 58px;
  height: 28px;
  filter: blur(1px);
  /* Apply a slight blur effect */
}

.bulletpal_shadow {
  top: 68px;
  left: -6px;
  position: relative;
  width: 120px;
  height: 100px;
  transform: rotateX(80deg);
  filter: blur(10px);
}

/* info box */

.info_box {
  position: absolute;
  top: 5px;
  left: 40px;
  background-color: #110d00;
  border: 3px solid #ffcc00;
  border-radius: 5px;
  width: 180px;
  height: 70px;
  filter: blur(1px);
}

.info_health {
  color: #ffcc00;
  font-size: 12px;
  left: 55px;
  top: 0px;
  position: fixed;
  filter: blur(0px);
}

.info_food {
  top: 15px;
}

.info_energy {
  top: 30px;
}

/* MOVE MODE SHIT */

.move-mode-border-top {
  position: fixed;
  border-top: 15px solid #ffcc00;
  width: 100%;
  top: 0;
  left: 0;
}

.move-mode-border-bottom {
  position: fixed;
  border-left: 15px solid #ffcc00;
  border-right: 15px solid #ffcc00;
  border-bottom: 15px solid #ffcc00;
  width: calc(100% - 30px);
  height: 200px;
}

.move-mode-border-left,
.move-mode-border-right {
  position: fixed;
  border-top: 25px solid #ffcc00;
  border-bottom: 25px solid #ffcc00;
  height: 20px;
  width: 100%;
}

.move-mode-border-top {
  top: 0;
}

.move-mode-border-bottom {
  bottom: 0;
}

.move-mode-border-left {
  left: 0;
}

.move-mode-border-right {
  right: 0;
}

.move-mode-text {
  position: fixed;
  font-size: 14px;
  color: #110d00;
  pointer-events: none;
  z-index: 10000;
  /* Ensure text appears above borders */
}

.move-mode-text-top {
  top: 2px;
  left: 50%;
  transform: translateX(-50%) rotate(0deg);
  /* Rotate text for top side */
}

.move-mode-text-bottom {
  bottom: 2px;
  left: 50%;
  transform: translateX(-50%) rotate(180deg);
  /* Rotate text for bottom side */
}

.move-mode-text-left {
  top: 50%;
  left: -23px;
  transform: translateY(-50%) rotate(-90deg);
  /* Rotate text for left side */
}

.move-mode-text-right {
  top: 50%;
  right: -23px;
  transform: translateY(-50%) rotate(90deg);
  /* Rotate text for right side */
}

.center-square {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100px;
  height: 100px;
  border: 0px solid #ffcc00;
  box-sizing: border-box;
  cursor: pointer;
}

.center-x {
  position: absolute;
  top: -86px;
  left: -32px;
  right: 0;
  bottom: 0;
  width: 0;
  height: 0;
  margin: auto;
  font-size: 92px;
  color: #ffcc00;
}

/* end of move mode shit */

.food_box {
  position: absolute;
  top: 5px;
  left: 40px;
  background-color: #110d00;
  border: 3px solid #ffcc00;
  border-radius: 5px;
  width: 210px;
  height: 120px;
  filter: blur(1px);
}

.food_title {
  color: #ffcc00;
  font-size: 18px;
  left: 106px;
  top: -4px;
  position: fixed;
  filter: blur(0.5px);
}

.food_icon {
  position: absolute;
  top: 50px;
  left: 60px;
  background-color: #110d00;
  border: 3px solid #ffcc00;
  border-radius: 5px;
  width: 40px;
  height: 40px;
  filter: blur(1px);
  background-image: url("sprite/sprite_unknown_food.png");
  background-size: 35px 35px;
  background-position: 2px;
  background-repeat: no-repeat;
}

.food_icon_2 {
  left: 120px;
  width: 45px;
  height: 45px;
  top: 48px;
  background-position: 4px;
  background-image: url("sprite/sprite_sweets.png");
  background-size: 40px 40px;
}

.food_icon_3 {
  left: 190px;
}

.food_counter_1 {
  color: #ffcc00;
  font-size: 22px;
  left: 78px;
  top: 86px;
  position: fixed;
  filter: blur(0.5px);
}

.food_counter_2 {
  left: 142px;
}

.food_counter_3 {
  left: 208px;
  background-position: 2px center;
  background-size: 35px 35px;
}

.popupFood {
  position: relative;
  left: 162px;
  top: -112px;
  color: #ffcc00;
  font-size: 22px;
  animation: flicker-rising 1.5s forwards;
}

@keyframes flicker-rising {
  0% {
    opacity: 1;
    transform: translateY(0px);
  }

  30% {
    opacity: 0.2;
  }

  50% {
    opacity: 0.7;
  }

  70% {
    opacity: 0.4;
  }

  100% {
    opacity: 1;
    transform: translateY(-20px);
    /* Adjust this value based on your requirements */
  }
}

.popup-container {
  position: absolute;
  top: 76px;
}

.inventory_box {
  position: absolute;
  top: 5px;
  left: 40px;
  background-color: #110d00;
  border: 3px solid #ffcc00;
  border-radius: 5px;
  width: 210px;
  height: 186px;
  filter: blur(1px);
}

.inventory_title {
  color: #ffcc00;
  font-size: 22px;
  left: 94px;
  top: -12px;
  position: fixed;
  filter: blur(0.5px);
}

.inv_counter_1 {
  left: 16px;
  top: 30px;
}

.inv_icon_2 {
  left: 125px;
}

.inv_icon_3 {
  left: 190px;
}

.inv_icon_4 {
  top: 122px;
  left: 60px;
}

.inv_icon_5 {
  top: 122px;
  left: 125px;
}

.inv_icon_6 {
  top: 122px;
  left: 190px;
}

.food_warn {
  position: absolute;
  left: 41px;
  top: 62px;
  height: 20px;
  width: 213px;
  background-color: #ffcc00;
  color: #110d00;
  filter: blur(1px);
  animation: blink_rapid 5.5s;
}

.food_warn_h1 {
  position: absolute;
  left: 15px;
  top: -14px;
  font-size: 22px;
  color: #110d00;
}

@keyframes blink_rapid {

  0%,
  20%,
  40%,
  60%,
  80%,
  100% {
    background-color: #ffcc00;
  }

  10%,
  30%,
  50%,
  70%,
  90% {
    background-color: rgba(11, 9, 0, 0.039);
  }
}

/*
      SETTINGS BOX AREA
*/

.settings_box {
  position: absolute;
  left: 34px;
  top: 175px;
  background-color: #ffcc00;
  border: 3px solid #ffcc00;
  border-radius: 5px;
  width: 64px;
  height: 4px;
  filter: blur(1px);
  z-index: 10;
}

.set_icon {
  position: relative;
  display: inline-block;
  left: 44px;
  top: -24px;
  width: 32px;
  height: 32px;
  background-color: #110d00;
  background-image: url(sprite/sprite_move.png);
  z-index: 11;
}

.icon_mute {
  background-image: url("sprite/sprite_mute.png");
}

.info_sacrifice {
  background-image: url("sprite/sprite_sacrifice.png");
  width: 32px;
  height: 32px;
  position: relative;
  display: inline-block;
  left: 178px;
  top: -178px;
  filter: blur(0.5px);
}
/* ... */

